2006-06-21  Raivis Dejus  <orvils@gmail.com>

	* configure.in: Put 'lv' Latvian to ALL_LINGUAS.

2006-06-18  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Don't destroy the prefs window if the window manager closes it
	(from HEAD, #343600).

2006-06-18  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Clear the genre field after re-reading (from HEAD, #340524)

2006-05-26  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.14.4.

2006-05-02  Luca Cavalli  <loopback@slackit.org>

	* src/gconf-bridge.c: (window_binding_perform_scheduled_sync),
	(window_binding_state_event_cb), (gconf_bridge_bind_window):
	Save and restore window maximized state (#340038).

2006-05-01  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* po/LINGUAS: Remove this file and revert to the old
	method of listing all linguas in configure.ac directly
	instead of a separate file. The temporary po/LINGUAS
	hack causes problems with newer intltool versions (see
	below). HEAD uses the correct method using
	IT_PROG_INTLTOOL, which should not be used for the
	gnome-2-14 branch.

	* configure.in: Put ALL_LINGUAS on one line to fix the
	build with newer intltools. See #338423 and related
	gnome-applets bug #339007.

2006-04-23  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	In completion_cb only manipulate the track store if there is stuff
	in it (#333402)

2006-04-23  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix progress bar calculation (John Thacker, #339062).

2006-04-23  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for cdio >= 0.70 (John N. Laliberte, #339303)

2006-04-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.14.3.

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Fix reversed check for invalid iterator. Fixes "Play doesn't work"
	and "only plays track 1" (#338144).

2006-04-14  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Add some buffering (#336319).
