@@ -1,3 +1,8 @@
+2006-07-12  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extractor.c:
+	Better error handling (#338511, Tim-Philipp Muller)
+
 2006-06-21  Raivis Dejus  <orvils@gmail.com>
 
 	* configure.in: Put 'lv' Latvian to ALL_LINGUAS.
